--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,7 +6,7 @@ COPY ./ /app/
 
 RUN pip install pyTelegramBotApi mysql-connector-python watchdog psutil
 
-RUN chmod +x ./start.sh
+# RUN chmod +x ./start.sh
 
-ENTRYPOINT ./start.sh
+ENTRYPOINT python start_db.py ; python bot.py
 # ENTRYPOINT ["tail", "-f", "/dev/null"]
